--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "name": "envbox",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "pnpm -r run dev",
+    "build": "pnpm -r run build",
+    "start": "pnpm -r run start",
+    "lint": "pnpm -r run lint"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -32,6 +34,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2"
+    "typescript": "^5.3.3",
+    "prettier": "^3.2.4"
   }
 }
